remove deprecated infinispan